[package]
name = "trainyard"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.0"
bevy-inspector-egui = "0.28.0"
rand = "0.8.5"
serde = { version = "1.0" , features = ["derive"] }
serde_json = "1.0"


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
